log
Fri 05 May 2023 12:39:50 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
test.c:245:5: error: redefinition of ‘main’
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
sudoku.c:69:5: note: previous definition of ‘main’ with type ‘int(int,  char **)’
   69 | int main( int argc, char *argv[] ){
      |     ^~~~
Compilation failed
ac31fca
Fri 05 May 2023 12:41:14 PM UTC: 
 sudoku.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  0|5
total_score: 0/70
0e3b334
Fri 05 May 2023 11:35:41 PM UTC: 
 sudoku.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:57:11: error: unused variable ‘num’ [-Werror=unused-variable]
   57 |       int num = 1;
      |           ^~~
cc1: all warnings being treated as errors
Compilation failed
4785991
Fri 05 May 2023 11:35:59 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
d021b39
Fri 05 May 2023 11:41:27 PM UTC: 
 sudoku.c | 15 ++++++++++-----
 1 file changed, 10 insertions(+), 5 deletions(-)
 tests:  2|4
total_score: 15/70
f0e745e
Fri 05 May 2023 11:42:08 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
test.c:245:5: error: redefinition of ‘main’
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
sudoku.c:87:5: note: previous definition of ‘main’ with type ‘int(int,  char **)’
   87 | int main( int argc, char *argv[] ){
      |     ^~~~
Compilation failed
4933d84
Fri 05 May 2023 11:42:20 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c:97:1: error: expected identifier or ‘(’ before ‘}’ token
   97 | }
      | ^
Compilation failed
f1b88f2
Fri 05 May 2023 11:42:32 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
3687e7c
